--- a/c-home.html
+++ b/c-home.html
@@ -31,7 +31,7 @@
             </p>
             <a
               class="flex items-center gap-3 bg-[#2B224E] p-2 lg:p-3 text-white rounded-md"
-              href=""
+              href="./c-home.html"
             >
               <i class="text-3xl lg:text-base iconoir-home-alt"></i>
               <span class="hidden lg:block">Inicio</span>
@@ -41,7 +41,7 @@
             <p class="hidden lg:block text-white font-semibold pb-2">Modulos</p>
             <a
               class="flex items-center gap-3 bg-transparent p-2 lg:p-3 text-white rounded-md"
-              href=""
+              href="./c-facturas.html"
             >
               <i class="text-3xl lg:text-base iconoir-archive"></i>
               <span class="hidden lg:block">Facturas</span>
@@ -91,9 +91,9 @@
         </div>
         <div class="flex gap-5 lg:mt-10 h-[calc(100vh-250px)] p-4 lg:pr-4 lg:py-0 lg:pl-0">
           <div class="flex flex-col gap-5 w-full lg:w-8/12">
-            <div class="bg-white p-4 rounded-md h-full">
+            <div class="bg-white rounded-md min-h-[48%]">
               <div
-                class="flex items-center justify-between border-b-2 border-b-[#F5F6FA] pb-3 relative before:content-[''] before:w-[51px] before:h-[6px] before:bg-[#F5F6FA] before:rounded-full before:absolute before:bottom-[-4px]"
+                class="flex mx-4 mt-4 items-center justify-between border-b-2 border-b-[#F5F6FA] pb-3 relative before:content-[''] before:w-[51px] before:h-[6px] before:bg-[#F5F6FA] before:rounded-full before:absolute before:bottom-[-4px]"
               >
                 <h3 class="text-[#201645] text-base lg:text-lg font-bold">
                   NUEVAS FACTURAS
@@ -106,10 +106,74 @@
                   <i class="text-2xl iconoir-nav-arrow-right"></i>
                 </a>
               </div>
+              <div class="max-h-[calc(100%-60px)] px-4 pb-4 overflow-auto pb-2">
+                <table class="w-full">
+                  <tbody>
+                    <tr class="cursor-pointer hover:bg-[#F5F6FA] border-b border-b-[#F5F6FA]">
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Vendedor:</span>
+                        <p>Carvajal Pulpa y Papel SA</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Valor Presente:</span>
+                        <p>$8,323,234</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Valor Futuro:</span>
+                        <p>$8,523,234</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Tasa:</span>
+                        <p>14.50%</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Fecha:</span>
+                        <p>2023-04-25</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Nro. Facturas:</span>
+                        <p>02</p>
+                      </td>
+                      <td class="p-4 whitespace-nowrap">
+                        <i class="text-lg iconoir-nav-arrow-right text-[#0075C9]"></i>
+                      </td>
+                    </tr>
+                    <tr class="cursor-pointer hover:bg-[#F5F6FA] border-b border-b-[#F5F6FA]">
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Vendedor:</span>
+                        <p>Carvajal Pulpa y Papel SA</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Valor Presente:</span>
+                        <p>$8,323,234</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Valor Futuro:</span>
+                        <p>$8,523,234</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Tasa:</span>
+                        <p>14.50%</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Fecha:</span>
+                        <p>2023-04-25</p>
+                      </td>
+                      <td class="text-[#201645] text-sm p-4 whitespace-nowrap">
+                        <span class="font-medium">Nro. Facturas:</span>
+                        <p>02</p>
+                      </td>
+                      <td class="p-4 whitespace-nowrap">
+                        <i class="text-lg iconoir-nav-arrow-right text-[#0075C9]"></i>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
-            <div class="bg-white p-4 rounded-md h-full">
+            <div class="bg-white rounded-md min-h-[48%]">
               <div
-                class="flex items-center justify-between border-b-2 border-b-[#F5F6FA] pb-3 relative before:content-[''] before:w-[51px] before:h-[6px] before:bg-[#F5F6FA] before:rounded-full before:absolute before:bottom-[-4px]"
+                class="flex mx-4 mt-4 items-center justify-between border-b-2 border-b-[#F5F6FA] pb-3 relative before:content-[''] before:w-[51px] before:h-[6px] before:bg-[#F5F6FA] before:rounded-full before:absolute before:bottom-[-4px]"
               >
                 <h3 class="text-[#201645] text-base lg:text-lg font-bold">
                   FACTURAS COMPRADAS
@@ -121,6 +185,12 @@
                   <span>Ver todas</span>
                   <i class="text-2xl iconoir-nav-arrow-right"></i>
                 </a>
+              </div>
+              <div class="flex h-[calc(100%-40px)] px-4 pb-4 items-center justify-center">
+                <div class="text-center">
+                  <i class="text-4xl lg:text-5xl text-[#D2D2D2] iconoir-archive"></i>
+                  <p class="font-semibold text-[#D2D2D2]">Aun no tienes facturas compradas</p>
+                </div>
               </div>
             </div>
           </div>
