--- a/landing.html
+++ b/landing.html
@@ -12,8 +12,8 @@
   <body>
     <header class="max-w-[1470px] mx-auto px-4">
       <div class="flex items-center justify-between py-4">
-        <img class="hidden lg:block" src="./img/logo.svg" alt="">
-        <img class="lg:hidden" src="./img/iso.svg" alt="">
+        <img class="hidden lg:block w-[400px]" src="./img/proporciones-03.svg" alt="">
+        <img class="lg:hidden w-14" src="./img/proporciones-05.svg" alt="">
         <div class="flex items-center gap-4">
           <button class="w-fit lg:w-[166px] h-[40px] lg:h-[50px] text-sm lg:text-base px-2 border border-[#0075C9] rounded-md text-[#0075C9] font-semibold duration-500 hover:duration-500 hover:bg-[#0075C9] hover:text-white">INICIAR SESIÓN</button>
           <button class="w-fit lg:w-[166px] h-[40px] lg:h-[50px] text-sm lg:text-base px-2 bg-[#0075C9] rounded-md text-white font-semibold duration-500 hover:duration-500 hover:bg-[#0066b0]">REGÍSTRATE</button>
@@ -243,7 +243,7 @@
     </section>
     <footer class="max-w-[1470px] mx-auto px-4 mt-20 mb-10">
       <div class="bg-[#201645] text-white p-10 pb-5 rounded-2xl">
-        <img class="w-[210px]" src="./img/logo.svg" alt="">
+        <img class="w-full md:w-[400px]" src="./img/proporciones-01.svg" alt="">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 lg:gap-10 mt-10">
           <div>
             <div class="flex items-center gap-2 mb-1">
