--- a/login.html
+++ b/login.html
@@ -17,8 +17,8 @@
         class="bg-[#201645] w-full lg:rounded-2xl p-4 lg:p-9 flex relative flex-col justify-center items-start lg:before:content-[''] lg:before:bg-[url('./img/bg-login.svg')] before:absolute before:left-0 before:right-0 before:top-0 before:bottom-0 before:bg-no-repeat before:bg-contain"
       >
         <img
-          class="w-[160px] lg:w-fit mt-10 lg:mt-0 lg:mb-10"
-          src="./img/logo.svg"
+          class="w-[160px] lg:w-[360px] mt-10 lg:mt-0 lg:mb-10"
+          src="./img/proporciones-04.svg"
           alt=""
         />
         <h2
@@ -58,9 +58,6 @@
           </form>
         </div>
         <div class="absolute bottom-5 text-center">
-          <p class="text-[#B3B3B3] font-light">
-            Sistema realizado por <span class="font-medium">SUFACTURA</span>
-          </p>
           <p class="text-[#B3B3B3] font-light">© 2023. All rights reserved.</p>
         </div>
       </div>
