--- a/c-ofertas-pasos-1.html
+++ b/c-ofertas-pasos-1.html
@@ -15,13 +15,13 @@
         class="absolute lg:relative bg-[#201645] rounded-r-3xl h-screen min-w-fit lg:min-w-[250px] p-4 z-10"
       >
         <img
-          class="h-[26px] my-5 hidden lg:block"
-          src="./img/logo.svg"
+          class="h-[50px] mb-5 mt-2 hidden lg:block"
+          src="./img/proporciones-04.svg"
           alt=""
         />
         <img
           class="h-[26px] my-5 lg:hidden mx-auto"
-          src="./img/iso.svg"
+          src="./img/proporciones-06.svg"
           alt=""
         />
         <nav class="mt-10">
