--- a/c-ofertas.html
+++ b/c-ofertas.html
@@ -15,13 +15,13 @@
         class="absolute lg:relative bg-[#201645] rounded-r-3xl h-screen min-w-fit lg:min-w-[250px] p-4 z-10"
       >
         <img
-          class="h-[26px] my-5 hidden lg:block"
-          src="./img/logo.svg"
+          class="h-[50px] mb-5 mt-2 hidden lg:block"
+          src="./img/proporciones-04.svg"
           alt=""
         />
         <img
           class="h-[26px] my-5 lg:hidden mx-auto"
-          src="./img/iso.svg"
+          src="./img/proporciones-06.svg"
           alt=""
         />
         <nav class="mt-10">
@@ -65,7 +65,7 @@
         <div class="p-4 lg:p-0 lg:pr-4">
           <div class="flex justify-between items-center gap-5 mb-3 mt-10">
             <h2 class="text-xl lg:text-3xl font-semibold">Ofertas</h2>
-            <a href="./c-ofertas-pasos-1.html" class="lg:w-[270px] flex items-center justify-center h-[50px] bg-[#0075C9] rounded-md text-white font-semibold disabled:bg-[#7BB5E1]">
+            <a href="./c-ofertas-pasos-1.html" class="lg:w-[270px] px-5 flex items-center justify-center h-[50px] bg-[#0075C9] rounded-md text-white font-semibold disabled:bg-[#7BB5E1]">
               CREAR OFERTA
             </a>
           </div>
